# gbf-wiki-image-uploader-discord-bot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  batch.bat  gbfwiki.py  images.py  main.py  pyproject.toml  requirements.txt  sparked_test_wiki.py
.github/workflows/: docker-build.yml
docs/: discord-slash-command-reference.md
